# cmcapi

./: .gitignore  README.md  setup.cfg
src/: cmc.py
src/cmcapi/: __init__.py
