[metadata]
name = cmcapi
version = 0.0.3
author = xueyuanl
author_email = p.xueyuanl@gmail.com
description = Coinmarketcap Wrapped API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xueyuanl/cmcapi
project_urls =
    Bug Tracker = https://github.com/xueyuanl/cmcapi/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

# reference: https://packaging.python.org/tutorials/packaging-projects/